KUSTOMIZE/fastapi-chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: kustomize
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - k3s.ayaka-m.cloudns.biz
    secretName: rancher-secret
  rules:
  - host: k3s.ayaka-m.cloudns.biz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-deployment
            port:
              number: 80
